# SpCoNavi

./: .gitignore  CMakeLists.txt  README.md  package.xml
CoRL/: README.md
SIGVerse/: README.md
configs/: spconavi_params.yaml
costmap_global/src/costmap_global/SpCoNavi_costmap/: CMakeLists.txt  package.xml
data/: README.md
launch/: gaussian_distribution_rsj.launch  spconavi_ros_default.launch  spconavi_spatial_concepts_visualizer.launch  visualize_spatial_concepts.launch
planning/: Astar.py  Astar_Database.py  Astar_SpCo.py  JuliusNbest_dec.py  README.md  README.txt  SpCoNavi0.01.py  SpCoNavi0.01.py~  SpCoNavi0.1.py  SpCoNavi0.1_SIGVerse.py  SpCoNavi0.1s.py  __init__.py  __init__.py~  __init__JSAI2019.py  costmap.launch  costmap.py  costmap_SIGVerse.py  minimal.yaml  path_visualizer.py  path_weight_visualizer_step.py  path_weight_visualizer_step_CoRL.py  path_weight_visualizer_step_SIGVerse.py  plugins.yaml  visualization.py  weight_visualizer.py
planning/chapter9/SpCoNavi/: CMakeLists.txt  package.xml
rosbook_pkgs-master/: .gitignore
scripts/: __init__.py  execute_node.py  generate_costmap.py  generate_path_weight_map.py  path_visualizer_follower_hsr.py  path_visualizer_follower_rulo.py  spatial_concepts_visualizer.py
src/: spconavi_astar_path_calculate.py  spconavi_costmap_generate.py  spconavi_execute.py  spconavi_math.py  spconavi_output_map.py  spconavi_path_visualizer_follower_hsr.py  spconavi_path_visualizer_follower_rulo.py  spconavi_read_data.py  spconavi_save_data.py  spconavi_save_path_weight_map.py  spconavi_spatial_concepts_visualizer.py  (+1 more)
(+560 files in other folders)
